<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">
    <LinearLayout
        android:layout_width="@dimen/content_width"
        android:layout_height="@dimen/content_heigth"
        android:layout_centerInParent="true"
        android:background="@drawable/background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dp"
            android:layout_marginRight="10.0dp"
            android:layout_marginBottom="6.0dp"
            android:layout_marginTop="10.0dp">
            <ImageButton android:id="@+id/register_back"
                android:layout_width="60.0dp"
                android:layout_height="30.0dp"
                android:src="@drawable/back"
                android:background="@android:color/transparent"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_marginTop="10.0dp">
                <ImageView
                    android:layout_width="40.0dp"
                    android:layout_height="40.0dp"
                    android:src="@drawable/gm_icon"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10.0dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_title"
                        android:textColor="@color/title_color"
                        android:textSize="@dimen/title_font"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textColor="@color/title_color"
                        android:textSize="@dimen/sub_title_font"/>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/line_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_marginTop="10.0dp"
            android:layout_marginLeft="30.0dp"
            android:layout_marginRight="20.0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="16.0dp">
                <RelativeLayout
                    android:layout_width="30.0dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:src="@drawable/phone"/>
                </RelativeLayout>

                <EditText android:id="@+id/register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30.0dp"
                    android:paddingLeft="6.0dp"
                    android:background="@color/edit_bg"
                    android:hint="@string/account_hint"
                    android:textSize="@dimen/button_font"
                    android:textColor="@color/edit_text"
                    android:inputType="phone"/>

            </RelativeLayout>

            <ImageView android:id="@+id/account_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/x"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_marginTop="10.0dp"
            android:layout_marginLeft="30.0dp"
            android:layout_marginRight="20.0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="16.0dp">
                <RelativeLayout
                    android:layout_width="30.0dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:src="@drawable/passport"/>
                </RelativeLayout>

                <EditText android:id="@+id/register_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30.0dp"
                    android:paddingLeft="6.0dp"
                    android:background="@color/edit_bg"
                    android:hint="@string/passport_hint"
                    android:textSize="@dimen/button_font"
                    android:textColor="@color/edit_text"
                    android:inputType="textPassword"/>

            </RelativeLayout>

            <ImageView android:id="@+id/passport_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/correct"/>
        </RelativeLayout>

        <TextView android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6.0dp"
            android:layout_marginLeft="30.0dp"
            android:layout_marginRight="26.0dp"
            android:text="@string/passport_error"
            android:textSize="@dimen/button_font"
            android:textColor="@color/error_color"/>

        <Button android:id="@+id/register_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_heigth"
            android:layout_marginTop="10.0dp"
            android:layout_marginLeft="30.0dp"
            android:layout_marginRight="36.0dp"
            android:text="@string/register"
            android:textSize="@dimen/button_font"
            android:background="@drawable/button"/>

    </LinearLayout>
</RelativeLayout>

